并发学习  并发编程的发展缘由

--- a/并发编程学习笔记/并发编程的基础.md
+++ b/并发编程学习笔记/并发编程的基础.md
@@ -1,5 +1,18 @@
 ### 多线程的发展历史
 
+什么情况下应该使用多线程？
+
+> 简单来讲，多线程是用来解决“阻塞”问题的。
+>
+> 阻塞的意思就是程序运行到某个函数或者过程时因为需要等待某些事件发生而暂时停止CPU占用的情况，也就是说会是的CPU闲置下来。
+
+所以，多线程的使用场景简单总结起来应该是：
+
+* 通过并行计算提高程序性能
+* 需要等待网络、I/O响应导致耗费大量的执行时间，可以采用异步线程的方式来减少阻塞
+
+
+
 ### 并发编程的基础
 
 #### 线程的状态
