Arthas从入门到实践.md

--- a/高性能MySQL-学习笔记/重做日志写入过程.md
+++ b/高性能MySQL-学习笔记/重做日志写入过程.md
@@ -130,4 +130,4 @@ mysql> show variables like 'innodb_log_buffer_size%';
 
 ​     1.重做日志信息 先写入 重做日志缓冲 再按一定条件顺序写入重做日志文件！
 
-​     2.`redo log buffer` 向 `redo log file `写，是按 512 个字节，也就是一个扇区的大小进行写入。扇区是写入的最小单位，一定能写入成功，因此过程中不需要 double write.
+​     2.`redo log buffer` 向 `redo log file `写，是按 512 个字节，也就是一个扇区的大小进行写入。扇区是写入的最小单位，一定能写入成功.
