为什么要重写hashcode和equals方法？

--- a/优惠券/优惠券系统应该如何设计？.md
+++ b/优惠券/优惠券系统应该如何设计？.md
@@ -34,13 +34,13 @@
 
 多数情况下都会选择第二种，增加紧迫感，促进用户下单。优惠券因涉及金额，通常需要财务审批，财务审批后优惠券ID生成。到此，优惠券的基本规则大概梳理完毕。当然这些只是最基本的规则，具体的还要和实际业务相结合。
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKXnqIpWwHkpT3ic2kl5ibThDQ59n1XUeoc9LDhpjM9yNhSS4lIAvGsLK0w/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda65fd7137b6?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 #### 二、创建活动
 
 创建的优惠券只是一系列规则的组合，通常还需要一个活动页。活动页上可放一张优惠券，也可放多张，具体看业务需求。
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKX8JnRSxvN3lSbFn7iaeicVgN8Ex7ibLe26UyCqJ1LN5JGuEYwHeWkFpkicQ/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda6c2cfdc0d8?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 一个活动通常包括活动基本信息和分享设置等。
 
@@ -58,19 +58,19 @@
 
 ##### 实例设计：
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKXRCeQiaB2VHOS2Yiaz5K7gibY78mibiau6K6DFibgiaGC3he8HHEDJknKdt7iaQ/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda7171f71818?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 活动创建后到活动列表页，同时生成一个活动链接，接下来就是为这个活动关联之前生成的优惠券。
 
 ##### 实例设计：
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKX9L7j0NZoAsOP3h1CyC3ibnIicetqrMUzxrxcxgyEQxOY8iaIPKIs7EJFA/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda731cb1acfd?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 点击卡券配置为活动添加优惠券。
 
 ##### 实例设计：
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKXGUlEBUcqBxfsVROMfWFEPzicMOkZ9LibFofaGPtZRkIkoloBTicvavX7Q/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda7559c0c555?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 到此，活动关联优惠券完成，接下来讲**优惠券投放和用户使用**等环节。 
 
@@ -100,7 +100,7 @@
 
 > 领取通常伴随着消息通知，如：短信、微信公众号，因此通知系统和营销系统也要打通。
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKX5WZ8AErM2BtcQM2yoC2r6b7RQkGKZcTBDwtVckzYaWhib9viaedcaeeQ/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda7a12a1568b?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 #### 五、用户使用
 
@@ -108,13 +108,13 @@
 
 ##### 实例设计：
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKXbe5q0d0D06MmGjCuvTHqLfObRbicA5Xf7OJZDunciaUchct4cQIw1RYg/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda7c7849a611?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 
 
 
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKXIYHN0tPBy9WWlzcfStGia3U5EVqicYWETYlLKPCd5opicQzvrdCAnOGFQ/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda7fa1ec20b7?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 #### 六、优惠券退还
 
@@ -162,7 +162,7 @@
 
 #####  实例设计：
 
-![img](https://mmbiz.qpic.cn/mmbiz/3wiaHiab86pHHWwRJSYic0u39fZQ9SDteKXd88vIbAxhD0pyMOw7zIjJBMeIFk7UBU2ichPGCMKQiahzbTASNEAT2yA/?wx_fmt=other)
+![img](https://user-gold-cdn.xitu.io/2018/11/1/166cda84bb26ad56?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
 大家可以看到，我在每个原型图下都提到具体要视业务而定。因为任何产品设计的出发点，都是业务，都是在解决业务。虽然业务和业务之间有共同点，但脱离业务的设计没有任何意义。
 
