IBatis逻辑分页导致SQL慢查询问题

--- a/真心话 想要的多一点，就得强悍一点，野心勃勃一点.md
+++ b/真心话 想要的多一点，就得强悍一点，野心勃勃一点.md
@@ -18,35 +18,19 @@
 
 > 有一类女孩子，从小就是听家长和老师的话的乖宝宝。读书的时候成绩还可以，也许还能上个重点大学，平时也会看看文学书籍，有点文艺的小想法。
 >
-> 
->
 > 这种姑娘的人生路径就是：毕业后家乡体制内，结婚靠相亲，人际被困扰，可能有时候连婚房的装修风格都没有话语权。
->
-> 
 >
 > 另外一边有点小资有点想法，还要时不时被人唾弃：读了几天书，就心比天高，矫情。
 >
-> 
->
 > 见过一点世面，又没本事在大城市立足；读过一点书，却不能把知识变成财富，回到小地方，不上不下。还要落一句：当初就知道不该让你读那么多书，脑子都读坏掉了。
->
-> 
 >
 > 蹉跎几年，在相亲市场上年纪大一点就被挑拣。心浮气躁之下，找个条件差不多的对象得了。
 >
-> 
->
 > 生了孩子，哇塞，那就更惨了。孩子怎么带，要不要穿尿不湿，早教要不要去上？要不要喝奶粉，喝什么奶粉？半夜谁起来泡奶？哪一个鸡毛蒜皮的小事都能搞得焦头烂额。
->
-> 
 >
 > 终于明白两百年前简奥斯汀写的《傲慢与偏见》的深刻价值了，可能我们大多数人不会经历时代的起伏，战争的颠簸。大部分人会经历的，就是这种稳定闭塞的环境中，为婚姻和名声所驱使的，匆忙投入婚姻，混混沌沌一生的生活。
 >
-> 
->
 > 不过，两百多年了也只出了一个简奥斯汀，故事中也只有一个伊丽莎白，大部分人还是没有掌握自己命运的能力。
->
-> 
 >
 > 年轻的姑娘要避免这种生活，就要经历一个强烈地自我意识觉醒的过程，自己锻造自己。过程有点痛苦，而且最后可能也不一定能成，但是试一下，总比浑浑噩噩一辈子来得好。
 
@@ -62,6 +46,8 @@
 但是，我喜欢她的踏实、努力，以及领悟力。她骨子里还有股任性，小宇宙里也埋着火星。我手把手地带她，期待有一天能够燃烧起来，成为一个有力量的人。我有时候笑：我教我女儿都没有这么仔细过。当然，可能我女儿现在还小，只需要给她爱与自由，还没到聊这些话题的时候。
 
 但是，这些话题，我想可以和你们聊一聊了。我一直在避免在公众号说一些「鸡汤感」太重的空话，虽然这种话大家往往都爱听。不过这几年，我一直在按照自己的当初的意愿前进，慢慢实现了自己的一些目标，所以，如果是拿出来总结探讨一下，也就不算是「虚无的鸡汤了」。
+
+
 
 **02** **目标感和毅力，决定了人和人最终的差距**
 
@@ -101,7 +87,7 @@
 
 但是，如果只有依赖规则和秩序的能力，却没有思考规则和秩序背后的逻辑，甚至是设计规则的能力，那么就总是免不了要有被规则「膈应」（or F**ck）的时候。比如，考研这件事，年年都有负面新闻：泄题、改分、面试歧视....本质上，还是考研这个游戏规则，本身就有漏洞，所以值得你去重新评估玩这个游戏的体验感和风险。
 
-**所以，第一点：****不要太有秩序感，要学会思考规则和秩序。甚至是，定义和设计属于自己的秩序。**
+所以，第一点：**不要太有秩序感，要学会思考规则和秩序。甚至是，定义和设计属于自己的秩序。**
 
 不过要想做到这一点，首先要有独立思考的勇气，敢于质疑，敢于问：为什么？凭什么？
 
