--- a/JVM/04 垃圾回收机制.md
+++ b/JVM/04 垃圾回收机制.md
@@ -119,6 +119,41 @@ https://docs.oracle.com/javase/specs/jls/se8/html/index.html
 
 
 
-
-
 ## 第三节课
+
+### 两个面试题
+
+1. `StringBuilder` 性能更好，是因为创建的对象更少。
+
+2. ++i 和 i++ 性能哪个更好？
+
+   答案是一样的，最后编译出来的字节码是一致的。
+
+3. try finally
+
+   ```java
+   public static String f() {
+       String str = "hello";
+       try{
+           return str;
+       } finally {
+           str = "gupao"
+       }
+   }
+   // 返回结果是 hello
+   // hello 已经被存储到了返回值中，因此最后结果是 Hello
+   ```
+
+### 字节码查看
+
+### Class文件简介
+
+Class 文件是一组以 8 未字节为基础单位的二级制流，各个数据严格按照顺序紧凑的列在Class文件之中，中间没有任何分隔符。
+
+只有两种数据类型：无符号和列表。
+
+* 节省空间
+
+* 效率高
+
+### 垃圾收集器
