新增 Netty 设计模式

--- a/设计模式/程序员内功心法之工厂模式.md
+++ b/设计模式/程序员内功心法之工厂模式.md
@@ -22,5 +22,49 @@
 
 简单工厂模式适用于工厂类负责创建的对象比较少的场景，并且客户端需要传入工厂类参数来告知工厂创建何种对象，但是可以不关系对象的创建逻辑。
 
+**弊端**：不利于业务扩展，每次都需要修改工厂代码，不符合开闭原则。
 
+对工厂继续优化，使用反射来创建对象，此时只需要传递全限定类名称即可。
+
+此时传递参数是字符串类型，有个问题，方法参数是字符串，可控性有待提升，而且还需要强制转型，所以我们继续优化，传递参数变成 `Class extends ICourse>`,此时就该工程就只接受实现了 ICourse 接口的类，也减少了错误发生的可能性。
+
+### 工厂方法模式
+
+定义一个创建对象的接口，但让实现这个接口的类来决定实例化哪个类，工厂方法让类的实例化推迟到子类中进行。
+
+工厂方法模式主要解决产品扩展的问题，简单工厂汇总，随着产品链的丰富，，如果每个课程的创建逻辑有区别的话，工厂的职责会变得越来越多，并不利于维护。
+
+根据单一职责我们应该将职能拆分，专人干专事。也就是说 Java 课程由 Java 工厂创建，Python 课程由 Python 工厂创建，我们对工厂本身再做一层抽象。
+
+工厂方法适用于以下场景： 
+
+1、创建对象需要大量重复的代码。 
+
+2、客户端（应用层）不依赖于产品类实例如何被创建、实现等细节。 
+
+3、一个类通过其子类来指定创建哪个对象。 
+
+工厂方法也有缺点： 
+
+1、类的个数容易过多，增加复杂度。 
+
+2、增加了系统的抽象性和理解难度。
+
+### 抽象工厂模式
+
+指提供一个创建一系列相关或相互依赖对象的接口，无须指定他们具体的类。
+
+**产品和产品等级结构以及产品族的关系**
+
+一个产品族对应一个工厂
+
+**缺点**： 
+
+1、规定了所有可能被创建的产品集合，产品族中扩展新的产品困难，需要修改抽象工厂 
+
+的接口。 
+
+2、增加了系统的抽象性和理解难度。 
+
+### 实践案例 - 手写连接池
 
