面试题总结

--- a/并发编程学习笔记/并发编程的原理.md
+++ b/并发编程学习笔记/并发编程的原理.md
@@ -1,7 +1,28 @@
+## 并发编程的基础
+
+### 线程的状态
+
+通过查阅 Thread 类源码可得，一个线程一般有以下了 6 种状态：
+
+```java
+public enum State {
+    NEW,// 初始状态，线程创建结束但是还未调用 start 方法
+    RUNNABLE,// 运行状态 （操作系统中的就绪和运行在 Java 中统一称为运行中）
+    BLOCKED,// 阻塞状态
+    WAITING,// 等待装填
+    TIMEDWAITING,// 超时等待，超时时间结束自动返回
+    TERMINATED; // 终止状态
+}
+```
+
+
+
+
+
 ### volatile 是干嘛的？
 
 * 可以保证可见性、防止内存重排序
-* Lock 指令（汇编层面） 缓存所 （MESI 协议）
+  * Lock 指令（汇编层面） 缓存所 （MESI 协议）0.	
 * 内存屏障
 * 四种内存屏障
   * loadload
@@ -9,9 +30,16 @@
   * loadstore 
   * storeload
 
+使用 volatile 修饰的变量在转变成会变代码的情况下会多出 lock 指令，而 lock 指令的作用在于：
+
+1. 将当前处理器缓存行的数据写回到系统内存；
+2. 写操作会使得其他 CPU 里缓存了该内存地址的数据无效；
+
 #### 使用场景
 
 * 关闭线程，使用 volatile 修饰变量，作为线程结束标记
+
+
 
 ### synchronized 原理分析
 
